
        [float]
        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-4.x]]
=== Node.js Agent version 4.x

See the <<upgrade-to-v4>> guide.


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Fix instrumentation for recent `@aws-sdk/client-*` releases that use
  `@smithy/smithy-client` v3. (For example `@aws-sdk/client-s3@3.575.0` released
  2024-05-13 updated to smithy-client v3.) Before this change the APM agent had
  been limiting patching of `@smithy/smithy-client` to `>=1 <3`.

* Mark the published AWS Lambda layers as supporting the "nodejs20.x" Lambda
  Runtime (`--compatible-runtimes`). The "nodejs20.x" runtime was released by
  AWS on 2023-11-15. ({issues}4033[#4033])
+
Note that this Node.js APM agent supports Node.js 20.x, so the new AWS Lambda
runtime was supported when it was released. However, the metadata stating
compatible runtimes (which is advisory) was not updated until now.

[float]
===== Chores


[[release-notes-4.5.4]]
==== 4.5.4 - 2024/05/13

[float]
===== Bug fixes

* Change how the "cookie" HTTP request header is represented in APM transaction
  data to avoid a rare, but possible, intake bug where the transaction could be
  rejected due to a mapping conflict.
+
Before this change a `Cookie: foo=bar; sessionid=42` HTTP request header
would be represented in the transaction document in Elasticsearch with these
document fields (the example assumes <<sanitize-field-names>> matches
"sessionid", as it does by default):
+
[source]
----
http.request.headers.cookie: "[REDACTED]"
...
http.request.cookies.foo: "bar"
http.request.cookies.sessionid: "[REDACTED]"
----
+
After this change it is represented as:
+
[source]
----
http.request.headers.cookie: "foo=bar; sessionid=REDACTED"
----
+