@@ -27,6 +27,11 @@ jobs:
         with:
           node-version: 'v16.20.2'
 
+      # Setup a Docker "buildx" builder container, used by "build-push-action"
+      # below for multi-platform image builds. Notes on multi-platform images:
+      # https://github.com/elastic/apm-agent-nodejs/issues/4038#issuecomment-2130406402
+      - uses: docker/setup-buildx-action@v3
+
       - name: Log in to the Elastic Container registry
         uses: docker/login-action@0d4c9c5ea7693da7b068278f7b52bda2a190a446 # v3.2.0
         with:
@@ -61,6 +66,7 @@ jobs:
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0  # v5.3.0
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: 'Dockerfile'
           push: true
           tags: ${{ steps.docker-meta.outputs.tags }}
@@ -94,6 +100,7 @@ jobs:
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0  # v5.3.0
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: 'Dockerfile.wolfi'
           push: true
           tags: ${{ steps.docker-meta-wolfi.outputs.tags }}
